flux/apps/homebridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: home-automation
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://homebridge.home-automation.svc:8581"
    uptime-kuma.io/name: "homebridge"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media & Streaming"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      containers:
        - name: homebridge
          image: homebridge/homebridge:latest
          imagePullPolicy: Always
          ports:
            - name: ui
              containerPort: 8581
              protocol: TCP
            - name: webhook
              containerPort: 3210
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8581
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8581
            initialDelaySeconds: 30
            periodSeconds: 15
          volumeMounts:
            - mountPath: /homebridge
              name: homebridge-pvc
            - mountPath: /run/dbus/system_bus_socket
              name: system-dbus
              readOnly: true
      volumes:
        - name: homebridge-pvc
          persistentVolumeClaim:
            claimName: homebridge-pvc
        - name: system-dbus
          hostPath:
            path: /run/dbus/system_bus_socket
            type: Socket
