flux/apps/homebridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: home-automation
spec:
  ports:
    - name: ui
      port: 8581
      protocol: TCP
      targetPort: ui
    - name: webhook
      port: 3210
      protocol: TCP
      targetPort: webhook
  selector:
    app: homebridge
  type: ClusterIP
