flux/apps/homebridge/httproute.enc.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homebridge
  namespace: home-automation
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: system-addon
  hostnames:
  - ENC[AES256_GCM,data:M3uR80qxSZEISUxkbnkFkYaEiGi5vPOOmO97e+3RPTI=,iv:0GUk4IFSVTiDLwWJbUWHqMFWp7ZltD+jdoRevyoU0DY=,tag:VCo54fqyejJvrmp6vWe8VA==,type:str]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homebridge
      port: 8581
sops:
  age:
  - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    enc: '-----BEGIN AGE ENCRYPTED FILE-----

      YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvcjFYcmFGcHFNVjZhNkRz

      endmKzN3TWJNQVM5SnVFSVRMaVBGUU9jQlg4CjE1QjFrLy9zci9Xc2VVUG00cVgv

      Rk8zTkFyeEZITHB3dDVVMXNaay9ZVVUKLS0tIE1CbXlieGJwR2U4bXJVM0cyNVk1

      N01VajNicUtOWCs4OU1EWklDbXFEWWsKkgash6UGMnyF0jxC5vhsfXEAHJr0ACPp

      b00jWmDyeoOcoKeuqKeahV3Fh0rrnZ/IQbqwPgkmfQcGv5frUGPCxw==

      -----END AGE ENCRYPTED FILE-----

      '
  lastmodified: '2025-12-30T09:37:47Z'
  mac: ENC[AES256_GCM,data:Adutv90/Csk/WHsNMmWSBC1PwwjgUo3aGq6gTs4Gi0qSCaK7PwuPmIc60EX9ai5SmDMikDuENWTYZV94KlDKIK2psbgbaJdEv1t7EnG9rriN+62P0nzqsH1f6opILb1aEunqlsBWamiJnXMJzT5yKcZvKhD1+Hp7p/Dlm+4z5GE=,iv:dAy/aBJOvlQLeLO9aaVsRNjJgK+o7OxJN7i8ni35Eco=,tag:Lyv/iv6VjQWxSq+mdnA9Tw==,type:str]
  encrypted_regex: hostnames|0
  version: 3.11.0
